fix: remove extra padding from chat-header-center

--- a/src/dotnet/Chat.UI.Blazor/Components/components.css
+++ b/src/dotnet/Chat.UI.Blazor/Components/components.css
@@ -148,9 +148,6 @@ body.hoverable .btn-square.add-user-btn:hover .btn-content {
     @apply flex-auto flex-x justify-between items-center grow gap-x-2;
     @apply truncate;
 }
-.chat-header-center:not(:has(.pic)) {
-    @apply pl-3;
-}
 .chat-header-center > .chat-header-title {
     @apply flex-1 flex-y items-start justify-center;
     @apply select-none;
